Make sure the header bottom arrow is fully visible on iOS / Android

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,6 +6,7 @@
   position: relative;
   /* z-index: 1; */
   height: 100vh;
+  height: calc(100vh - var(--vh-offset, 0px));
   /* background-color: pink; */
   display: flex;
   flex-direction: column;
